[package]
name = "neck_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.21.0"
egui-wgpu = "0.21.0"
eframe = { version = "0.21.3", features = ["wgpu"] }
egui_extras = { version = "0.21.0", features = ["svg"] }

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
